--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon orange-eb36b919657e9e014dd9f7e3a146b15c59d64b9ee43db4d88d05017fe4168f86.ico">
+  <link rel="icon" type="image/x-icon" href="https://oiltest.report/assets/favicon%20orange-eb36b919657e9e014dd9f7e3a146b15c59d64b9ee43db4d88d05017fe4168f86.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Minerclient</title>
   <style>
