--- a/index.html
+++ b/index.html
@@ -6,60 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Minerclient</title>
   <style>
-    /* Стиль взят с ориентацией на Minerclient.html: светлая тема, плавные тени, аккуратные рамки, системные шрифты */
     :root{
-      --bg:#ffffff;
-      --text:#111827;            /* почти чёрный */
-      --muted:#6b7280;           /* серый подзаголовков */
-      --accent:#0f62fe;          /* спокойный синий акцент */
-      --border:#e5e7eb;          /* светлая рамка */
-      --panel:#ffffff;           /* карточки белые */
-      --panel-2:#f9fafb;         /* светло-серый фон кнопок */
-      --shadow:0 10px 30px rgba(15,23,42,.06);
-      --radius:14px;
+      --bg:#ffffff; --text:#111827; --muted:#6b7280; --accent:#0f62fe;
+      --border:#e5e7eb; --panel:#ffffff; --panel-2:#f9fafb; --shadow:0 10px 30px rgba(15,23,42,.06); --radius:14px;
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0; font: 15px/1.65 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans"; color:var(--text); background:var(--bg)}
+    *{box-sizing:border-box} html,body{height:100%}
+    body{margin:0; font:15px/1.65 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial,"Noto Sans"; color:var(--text); background:var(--bg)}
     .container{max-width:1080px; margin:28px auto 40px; padding:0 20px}
-
     header{display:flex;align-items:center;gap:14px;margin-bottom:12px}
     .logo{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.2px}
     .drop{width:18px;height:22px;border:2px solid #111827;border-radius:4px;position:relative}
     .drop:after{content:"";position:absolute;left:50%;top:2px;transform:translateX(-50%);width:6px;height:10px;border-radius:3px;background:#111827}
     h1{font-size:20px;margin:0}
-
     .notice{background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow);padding:18px}
     .notice p{margin:0 0 10px}
     .notice code{background:#eef2ff;border:1px solid #dbe2ff;color:#1e3a8a;padding:2px 6px;border-radius:6px}
-
     .tools{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
     .btn{appearance:none;border:1px solid var(--border);background:var(--panel-2);color:#1f2937;padding:8px 12px;border-radius:10px;cursor:pointer}
-    .btn:hover{filter:brightness(1.03)}
-    .btn.primary{border-color:#bfd3ff;background:#e8f0ff;color:#0f2a7a}
-
+    .btn:hover{filter:brightness(1.03)} .btn.primary{border-color:#bfd3ff;background:#e8f0ff;color:#0f2a7a}
     .viewer{margin-top:22px;background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow)}
     .viewer-hd{display:flex;align-items:center;justify-content:space-between;padding:12px 14px;border-bottom:1px solid var(--border)}
     .viewer-hd .title{font-weight:600;color:#374151}
     .viewer-bd{height:calc(100vh - 260px); min-height:560px}
     .viewer-bd .pdf{width:100%;height:100%;border:0;border-radius:0 0 var(--radius) var(--radius)}
     .viewer-fallback{padding:18px;color:var(--muted)}
-
     @media (max-width: 820px){ .viewer-bd{height:72vh} }
   </style>
 </head>
 <body>
   <div class="container">
     <header>
-        <div class="flex-shrink-0 flex items-center mr-2" >
-        <img class="h-5 w-auto" src="https://oiltest.report/images/micgsm-logo-3-web-bw.png" alt="" ; style="width: 100px">
+      <div class="flex-shrink-0 flex items-center mr-2">
+        <img class="h-5 w-auto" src="https://oiltest.report/images/micgsm-logo-3-web-bw.png" alt="" style="width:100px">
       </div>
     </header>
 
     <section class="notice">
       <p>Пожалуйста, удостоверьтесь, что оригинальный протокол, представленный на этом сайте, идентичен тому, что у Вас в руках.</p>
       <p>Также проверьте, что страница открылась именно в домене: "https://oiltest.report". Любой другой адрес и протокол будут считаться неоригинальными.</p>
-      
     </section>
 
     <section class="viewer" aria-label="PDF отчёт">
@@ -67,7 +51,8 @@
         <div class="title">Просмотр PDF протокола</div>
         <div class="muted" id="pdfName" style="color:#6b7280">ГПА-1.pdf</div>
       </div>
-      <div class="viewer-bd">
+      <div class="viewer-bd" id="viewerBody">
+        <!-- По умолчанию <embed>, для Safari/iOS в скрипте заменим на <iframe> -->
         <embed id="pdfViewer" class="pdf" src="ГПА-1.pdf" type="application/pdf" />
         <div id="pdfFallback" class="viewer-fallback" hidden>
           Не удалось встроить PDF. <a id="pdfLink" href="ГПА-1.pdf" download>Скачать файл</a>
@@ -77,25 +62,69 @@
   </div>
 
   <script>
-    (function(){
-      const viewer = document.getElementById('pdfViewer');
+    (function () {
+      const viewerBody = document.getElementById('viewerBody');
+      let viewer = document.getElementById('pdfViewer'); // может быть <embed> или <iframe> после замены
       const fallback = document.getElementById('pdfFallback');
       const link = document.getElementById('pdfLink');
       const nameEl = document.getElementById('pdfName');
 
-      function setPdf(url, display){
-        viewer.src = url; if(link) link.href = url; nameEl.textContent = display || url.split('/').pop() || 'ГПА-1.pdf';
+      // --- Safari/iOS детект и замена на <iframe> (исправляет "только 1 страница" в Safari) ---
+      const ua = navigator.userAgent;
+      const isIOS = /iPad|iPhone|iPod/.test(ua) || (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
+      const isSafari = /^((?!chrome|android).)*safari/i.test(ua);
+      function swapToIframe(src) {
+        const iframe = document.createElement('iframe');
+        iframe.id = 'pdfViewer';
+        iframe.className = 'pdf';
+        // добавим якорь, чтобы Safari показывал тулбар/прокрутку
+        iframe.src = (src || viewer.getAttribute('src') || 'ГПА-1.pdf') + '#toolbar=1';
+        viewer.replaceWith(iframe);
+        viewer = iframe;
+      }
+      if (isSafari || isIOS) {
+        swapToIframe(viewer.getAttribute('src'));
+      }
+      // ------------------------------------------------------------------------
+
+      function setPdf(url, displayName) {
+        if (viewer) viewer.src = url + ( (isSafari || isIOS) ? '#toolbar=1' : '' );
+        if (link) link.href = url;
+        if (nameEl) nameEl.textContent = displayName || url.split('/').pop() || 'ГПА-1.pdf';
       }
 
-      document.getElementById('openLocal').addEventListener('click',()=>setPdf('ГПА-1.pdf','ГПА-1.pdf'));
+      // Безопасные проверки на наличие элементов (чтобы не ломать остальной код)
+      const openLocal = document.getElementById('openLocal');
+      if (openLocal) openLocal.addEventListener('click', () => setPdf('ГПА-1.pdf', 'ГПА-1.pdf'));
+
       const input = document.getElementById('pdfInput');
-      input.addEventListener('change',()=>{
-        const f = input.files && input.files[0]; if(!f) return;
-        const url = URL.createObjectURL(f); setPdf(url, f.name);
-      });
-      document.getElementById('downloadBtn').addEventListener('click',()=>{ const a=document.createElement('a'); a.href=viewer.src; a.download=nameEl.textContent||'ГПА-1.pdf'; document.body.appendChild(a); a.click(); a.remove(); });
-      document.getElementById('printBtn').addEventListener('click',()=>{ window.open(viewer.src, '_blank'); });
-      viewer.addEventListener('error',()=>{ viewer.hidden=true; fallback.hidden=false; });
+      if (input) {
+        input.addEventListener('change', () => {
+          const f = input.files && input.files[0]; if (!f) return;
+          const url = URL.createObjectURL(f);
+          setPdf(url, f.name);
+        });
+      }
+
+      const downloadBtn = document.getElementById('downloadBtn');
+      if (downloadBtn) {
+        downloadBtn.addEventListener('click', () => {
+          const a = document.createElement('a');
+          a.href = viewer.src; a.download = (nameEl && nameEl.textContent) || 'ГПА-1.pdf';
+          document.body.appendChild(a); a.click(); a.remove();
+        });
+      }
+
+      const printBtn = document.getElementById('printBtn');
+      if (printBtn) {
+        printBtn.addEventListener('click', () => { window.open(viewer.src, '_blank'); });
+      }
+
+      // Fallback для случаев, когда встраивание не поддерживается
+      // (у <iframe> событие error не всегда срабатывает — оставим как есть для <embed>)
+      if (viewer && viewer.tagName === 'EMBED') {
+        viewer.addEventListener('error', () => { viewer.hidden = true; fallback.hidden = false; });
+      }
     })();
   </script>
 </body>
