--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
     .container{max-width:1080px; margin:28px auto 40px; padding:0 20px}
     header{display:flex;align-items:center;gap:14px;margin-bottom:12px}
     .logo{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.2px}
-    .drop{width:18px;height:22px;border:2px solid #111827;border-radius:4px;position:relative}
-    .drop:after{content:"";position:absolute;left:50%;top:2px;transform:translateX(-50%);width:6px;height:10px;border-radius:3px;background:#111827}
     h1{font-size:20px;margin:0}
     .notice{background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow);padding:18px}
     .notice p{margin:0 0 10px}
     .notice code{background:#eef2ff;border:1px solid #dbe2ff;color:#1e3a8a;padding:2px 6px;border-radius:6px}
     .tools{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
-    .btn{appearance:none;border:1px solid var(--border);background:var(--panel-2);color:#1f2937;padding:8px 12px;border-radius:10px;cursor:pointer}
-    .btn:hover{filter:brightness(1.03)} .btn.primary{border-color:#bfd3ff;background:#e8f0ff;color:#0f2a7a}
+    .btn{appearance:none;border:1px solid var(--border);background:var(--panel-2);color:#1f2937;padding:8px 12px;border-radius:10px;cursor:pointer;text-decoration:none}
+    .btn:hover{filter:brightness(1.03)}
+    .btn.primary{border-color:#bfd3ff;background:#e8f0ff;color:#0f2a7a}
     .viewer{margin-top:22px;background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow)}
-    .viewer-hd{display:flex;align-items:center;justify-content:space-between;padding:12px 14px;border-bottom:1px solid var(--border)}
+    .viewer-hd{display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap;padding:12px 14px;border-bottom:1px solid var(--border)}
     .viewer-hd .title{font-weight:600;color:#374151}
-    .viewer-bd{height:calc(100vh - 260px); min-height:560px}
-    .viewer-bd .pdf{width:100%;height:100%;border:0;border-radius:0 0 var(--radius) var(--radius)}
+    .viewer-bd{height:calc(100vh - 260px); min-height:1180px}
+    .viewer-bd .pdf{width:100%;height:100%;border:0;border-radius:0 0}
     .viewer-fallback{padding:18px;color:var(--muted)}
     @media (max-width: 820px){ .viewer-bd{height:72vh} }
   </style>
@@ -47,12 +46,8 @@
     </section>
 
     <section class="viewer" aria-label="PDF отчёт">
-      <div class="viewer-hd">
-        <div class="title">Просмотр PDF протокола</div>
-        <div class="muted" id="pdfName" style="color:#6b7280">ГПА-1.pdf</div>
-      </div>
+
       <div class="viewer-bd" id="viewerBody">
-        <!-- По умолчанию <embed>, для Safari/iOS в скрипте заменим на <iframe> -->
         <embed id="pdfViewer" class="pdf" src="ГПА-1.pdf" type="application/pdf" />
         <div id="pdfFallback" class="viewer-fallback" hidden>
           Не удалось встроить PDF. <a id="pdfLink" href="ГПА-1.pdf" download>Скачать файл</a>
@@ -63,68 +58,77 @@
 
   <script>
     (function () {
-      const viewerBody = document.getElementById('viewerBody');
-      let viewer = document.getElementById('pdfViewer'); // может быть <embed> или <iframe> после замены
+      const PDFS = {
+        "47": { src: "ГПА-1.pdf", label: "ГПА-1.pdf" },
+        "59": { src: "ГПА-2.pdf", label: "ГПА-2.pdf" },
+        "72": { src: "ГПА-3.pdf", label: "ГПА-3.pdf" }
+      };
+
+      let viewer = document.getElementById('pdfViewer');
       const fallback = document.getElementById('pdfFallback');
       const link = document.getElementById('pdfLink');
       const nameEl = document.getElementById('pdfName');
 
-      // --- Safari/iOS детект и замена на <iframe> (исправляет "только 1 страница" в Safari) ---
-      const ua = navigator.userAgent;
-      const isIOS = /iPad|iPhone|iPod/.test(ua) || (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
-      const isSafari = /^((?!chrome|android).)*safari/i.test(ua);
-      function swapToIframe(src) {
-        const iframe = document.createElement('iframe');
-        iframe.id = 'pdfViewer';
-        iframe.className = 'pdf';
-        // добавим якорь, чтобы Safari показывал тулбар/прокрутку
-        iframe.src = (src || viewer.getAttribute('src') || 'ГПА-1.pdf') + '#toolbar=1';
-        viewer.replaceWith(iframe);
-        viewer = iframe;
-      }
-      if (isSafari || isIOS) {
-        swapToIframe(viewer.getAttribute('src'));
-      }
-      // ------------------------------------------------------------------------
-
       function setPdf(url, displayName) {
-        if (viewer) viewer.src = url + ( (isSafari || isIOS) ? '#toolbar=1' : '' );
+        if (viewer) viewer.src = url;
         if (link) link.href = url;
-        if (nameEl) nameEl.textContent = displayName || url.split('/').pop() || 'ГПА-1.pdf';
-      }
-
-      // Безопасные проверки на наличие элементов (чтобы не ломать остальной код)
-      const openLocal = document.getElementById('openLocal');
-      if (openLocal) openLocal.addEventListener('click', () => setPdf('ГПА-1.pdf', 'ГПА-1.pdf'));
-
-      const input = document.getElementById('pdfInput');
-      if (input) {
-        input.addEventListener('change', () => {
-          const f = input.files && input.files[0]; if (!f) return;
-          const url = URL.createObjectURL(f);
-          setPdf(url, f.name);
+        if (nameEl) nameEl.textContent = displayName || url.split('/').pop();
+        document.querySelectorAll('[data-doc]').forEach(a => {
+          const isActive = url.endsWith(PDFS[a.getAttribute('data-doc')]?.src || '');
+          a.classList.toggle('primary', !!isActive);
         });
       }
+
+      function getDocKeyFromURL() {
+        const p = new URLSearchParams(location.search);
+        const key = p.get('doc') || p.get('pdf') || '1';
+        return PDFS[key] ? key : '1';
+      }
+
+      function initFromURL() {
+        const key = getDocKeyFromURL();
+        const { src, label } = PDFS[key];
+        setPdf(src, label);
+      }
+
+      document.querySelectorAll('a[data-doc]').forEach(a => {
+        a.addEventListener('click', (e) => {
+          e.preventDefault();
+          const key = a.getAttribute('data-doc');
+          if (!PDFS[key]) return;
+          const { src, label } = PDFS[key];
+          const url = new URL(location.href);
+          url.searchParams.set('doc', key);
+          history.pushState({ doc: key }, '', url.toString());
+          setPdf(src, label);
+        });
+      });
+
+      window.addEventListener('popstate', () => initFromURL());
 
       const downloadBtn = document.getElementById('downloadBtn');
       if (downloadBtn) {
         downloadBtn.addEventListener('click', () => {
           const a = document.createElement('a');
-          a.href = viewer.src; a.download = (nameEl && nameEl.textContent) || 'ГПА-1.pdf';
+          const cleanSrc = (viewer.src || '').split('#')[0];
+          a.href = cleanSrc;
+          a.download = (nameEl && nameEl.textContent) || cleanSrc.split('/').pop();
           document.body.appendChild(a); a.click(); a.remove();
         });
       }
 
       const printBtn = document.getElementById('printBtn');
       if (printBtn) {
-        printBtn.addEventListener('click', () => { window.open(viewer.src, '_blank'); });
+        printBtn.addEventListener('click', () => {
+          window.open(viewer.src, '_blank');
+        });
       }
 
-      // Fallback для случаев, когда встраивание не поддерживается
-      // (у <iframe> событие error не всегда срабатывает — оставим как есть для <embed>)
       if (viewer && viewer.tagName === 'EMBED') {
         viewer.addEventListener('error', () => { viewer.hidden = true; fallback.hidden = false; });
       }
+
+      initFromURL();
     })();
   </script>
 </body>
