--- a/index.html
+++ b/index.html
@@ -19,16 +19,9 @@
     .notice{background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow);padding:18px}
     .notice p{margin:0 0 10px}
     .notice code{background:#eef2ff;border:1px solid #dbe2ff;color:#1e3a8a;padding:2px 6px;border-radius:6px}
-    .tools{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
-    .btn{appearance:none;border:1px solid var(--border);background:var(--panel-2);color:#1f2937;padding:8px 12px;border-radius:10px;cursor:pointer;text-decoration:none}
-    .btn:hover{filter:brightness(1.03)}
-    .btn.primary{border-color:#bfd3ff;background:#e8f0ff;color:#0f2a7a}
     .viewer{margin-top:22px;background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow)}
-    .viewer-hd{display:flex;align-items:center;justify-content:space-between;gap:10px;flex-wrap:wrap;padding:12px 14px;border-bottom:1px solid var(--border)}
-    .viewer-hd .title{font-weight:600;color:#374151}
-    .viewer-bd{height:calc(100vh - 260px); min-height:1180px}
+    .viewer-bd{height:calc(100vh - 260px);min-height:560px;padding:18px}
     .viewer-bd .pdf{width:100%;height:100%;border:0;border-radius:0 0}
-    .viewer-fallback{padding:18px;color:var(--muted)}
     @media (max-width: 820px){ .viewer-bd{height:72vh} }
   </style>
 </head>
@@ -42,16 +35,13 @@
 
     <section class="notice">
       <p>Пожалуйста, удостоверьтесь, что оригинальный протокол, представленный на этом сайте, идентичен тому, что у Вас в руках.</p>
-      <p>Также проверьте, что страница открылась именно в домене: "https://oiltest.report". Любой другой адрес и протокол будут считаться неоригинальными.</p>
+      <p>Также проверьте, что страница открылась именно в домене: <a href="https://oiltest.report" style="text-decoration: none; color:var(--text)">"https://oiltest-report.ru"</a>. Любой другой адрес и протокол будут считаться неоригинальными.</p>
     </section>
 
-    <section class="viewer" aria-label="PDF отчёт">
-
-      <div class="viewer-bd" id="viewerBody">
-        <embed id="pdfViewer" class="pdf" src="ГПА-1.pdf" type="application/pdf" />
-        <div id="pdfFallback" class="viewer-fallback" hidden>
-          Не удалось встроить PDF. <a id="pdfLink" href="ГПА-1.pdf" download>Скачать файл</a>
-        </div>
+    <!-- Viewer тек doc параметрі бар болса ғана қосылады -->
+    <section id="viewerSection" class="viewer" style="display:none;">
+      <div class="viewer-bd">
+        <embed id="pdfViewer" class="pdf" src="" type="application/pdf">
       </div>
     </section>
   </div>
@@ -64,71 +54,15 @@
         "72": { src: "ГПА-3.pdf", label: "ГПА-3.pdf" }
       };
 
-      let viewer = document.getElementById('pdfViewer');
-      const fallback = document.getElementById('pdfFallback');
-      const link = document.getElementById('pdfLink');
-      const nameEl = document.getElementById('pdfName');
+      const params = new URLSearchParams(location.search);
+      const key = params.get("doc");
+      const viewerSection = document.getElementById("viewerSection");
+      const pdfViewer = document.getElementById("pdfViewer");
 
-      function setPdf(url, displayName) {
-        if (viewer) viewer.src = url;
-        if (link) link.href = url;
-        if (nameEl) nameEl.textContent = displayName || url.split('/').pop();
-        document.querySelectorAll('[data-doc]').forEach(a => {
-          const isActive = url.endsWith(PDFS[a.getAttribute('data-doc')]?.src || '');
-          a.classList.toggle('primary', !!isActive);
-        });
+      if (key && PDFS[key]) {
+        viewerSection.style.display = "block";
+        pdfViewer.src = PDFS[key].src;
       }
-
-      function getDocKeyFromURL() {
-        const p = new URLSearchParams(location.search);
-        const key = p.get('doc') || p.get('pdf') || '1';
-        return PDFS[key] ? key : '1';
-      }
-
-      function initFromURL() {
-        const key = getDocKeyFromURL();
-        const { src, label } = PDFS[key];
-        setPdf(src, label);
-      }
-
-      document.querySelectorAll('a[data-doc]').forEach(a => {
-        a.addEventListener('click', (e) => {
-          e.preventDefault();
-          const key = a.getAttribute('data-doc');
-          if (!PDFS[key]) return;
-          const { src, label } = PDFS[key];
-          const url = new URL(location.href);
-          url.searchParams.set('doc', key);
-          history.pushState({ doc: key }, '', url.toString());
-          setPdf(src, label);
-        });
-      });
-
-      window.addEventListener('popstate', () => initFromURL());
-
-      const downloadBtn = document.getElementById('downloadBtn');
-      if (downloadBtn) {
-        downloadBtn.addEventListener('click', () => {
-          const a = document.createElement('a');
-          const cleanSrc = (viewer.src || '').split('#')[0];
-          a.href = cleanSrc;
-          a.download = (nameEl && nameEl.textContent) || cleanSrc.split('/').pop();
-          document.body.appendChild(a); a.click(); a.remove();
-        });
-      }
-
-      const printBtn = document.getElementById('printBtn');
-      if (printBtn) {
-        printBtn.addEventListener('click', () => {
-          window.open(viewer.src, '_blank');
-        });
-      }
-
-      if (viewer && viewer.tagName === 'EMBED') {
-        viewer.addEventListener('error', () => { viewer.hidden = true; fallback.hidden = false; });
-      }
-
-      initFromURL();
     })();
   </script>
 </body>
