--- a/index.html
+++ b/index.html
@@ -8,21 +8,67 @@
   <style>
     :root{
       --bg:#ffffff; --text:#111827; --muted:#6b7280; --accent:#0f62fe;
-      --border:#e5e7eb; --panel:#ffffff; --panel-2:#f9fafb; --shadow:0 10px 30px rgba(15,23,42,.06); --radius:14px;
+      --border:#e5e7eb; --panel:#ffffff; --panel-2:#f9fafb;
+      --shadow:0 10px 30px rgba(15,23,42,.06); --radius:14px;
+      --vh: 1vh;
     }
     *{box-sizing:border-box} html,body{height:100%}
-    body{margin:0; font:15px/1.65 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial,"Noto Sans"; color:var(--text); background:var(--bg)}
+    body{
+      margin:0;
+      font:15px/1.65 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial,"Noto Sans";
+      color:var(--text);
+      background:var(--bg)
+    }
     .container{max-width:1080px; margin:28px auto 40px; padding:0 20px}
     header{display:flex;align-items:center;gap:14px;margin-bottom:12px}
     .logo{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.2px}
     h1{font-size:20px;margin:0}
-    .notice{background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow);padding:18px}
+    .notice{
+      background:var(--panel);
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:18px
+    }
     .notice p{margin:0 0 10px}
-    .notice code{background:#eef2ff;border:1px solid #dbe2ff;color:#1e3a8a;padding:2px 6px;border-radius:6px}
-    .viewer{margin-top:22px;background:var(--panel);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow)}
-    .viewer-bd{height:calc(100vh - 260px);min-height:560px;padding:18px}
-    .viewer-bd .pdf{width:100%;height:100%;border:0;border-radius:0 0}
-    @media (max-width: 820px){ .viewer-bd{height:72vh} }
+    .notice code{
+      background:#eef2ff;
+      border:1px solid #dbe2ff;
+      color:#1e3a8a;
+      padding:2px 6px;
+      border-radius:6px
+    }
+
+    /* PDF көру аймағы */
+    .viewer{
+      margin-top:22px;
+      background:var(--panel);
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow)
+    }
+    .viewer-bd{
+      height:calc(var(--vh, 1vh) * 100 - 180px);
+      min-height:420px;
+      padding:18px;
+      overflow:hidden;
+    }
+    @supports (height: 100dvh) {
+      .viewer-bd{ height:calc(100dvh - 180px); }
+    }
+    @media (max-width: 820px){
+      .viewer-bd{
+        height:calc(var(--vh, 1vh) * 100 - 140px);
+        min-height:60vh;
+        padding-bottom:calc(18px + env(safe-area-inset-bottom, 0px));
+      }
+    }
+    .viewer-bd .pdf{
+      width:100%;
+      height:100%;
+      display:block;
+      border:0;
+    }
   </style>
 </head>
 <body>
@@ -35,10 +81,10 @@
 
     <section class="notice">
       <p>Пожалуйста, удостоверьтесь, что оригинальный протокол, представленный на этом сайте, идентичен тому, что у Вас в руках.</p>
-      <p>Также проверьте, что страница открылась именно в домене: <a href="https://oiltest.report" style="text-decoration: none; color:var(--text)">"https://oiltest-report.ru"</a>. Любой другой адрес и протокол будут считаться неоригинальными.</p>
+      <p>Также проверьте, что страница открылась именно в домене: <a href="https://oiltest.report" style="text-decoration:none;color:var(--text)">"https://oiltest-report.ru"</a>. Любой другой адрес и протокол будут считаться неоригинальными.</p>
     </section>
 
-    <!-- Viewer тек doc параметрі бар болса ғана қосылады -->
+    <!-- Viewer тек doc параметрі бар болса ғана көрсетіледі -->
     <section id="viewerSection" class="viewer" style="display:none;">
       <div class="viewer-bd">
         <embed id="pdfViewer" class="pdf" src="" type="application/pdf">
@@ -47,6 +93,20 @@
   </div>
 
   <script>
+    // Мобиль биіктігін нақты анықтау
+    (function () {
+      function setVh() {
+        var vh = window.innerHeight * 0.01;
+        document.documentElement.style.setProperty('--vh', vh + 'px');
+      }
+      setVh();
+      window.addEventListener('resize', setVh, { passive: true });
+      window.addEventListener('orientationchange', () => setTimeout(setVh, 350), { passive: true });
+    })();
+  </script>
+
+  <script>
+    // PDF көрсету логикасы
     (function () {
       const PDFS = {
         "47": { src: "ГПА-1.pdf", label: "ГПА-1.pdf" },
