--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/x-icon" href="https://oiltest.report/assets/favicon%20orange-eb36b919657e9e014dd9f7e3a146b15c59d64b9ee43db4d88d05017fe4168f86.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Minerclient</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <style>
     :root{
       --bg:#ffffff; --text:#111827; --muted:#6b7280;
@@ -31,10 +32,8 @@
     }
     .notice p{margin:0 0 10px}
     .notice a{color:inherit; text-decoration:none}
-
-    /* === A4 контейнер === */
     .viewer-wrap{
-      display:none; /* тек ?doc болса */
+      display:none;
       justify-content:center;
     }
     .viewer{
@@ -43,21 +42,52 @@
       border-radius:var(--radius);
       box-shadow:var(--shadow);
       width:100%;
-      aspect-ratio: 1 / 1.4142;    /* A4 пропорциясы (ені : биіктік) */
-      overflow:hidden;
-      display:flex;
+      padding:20px;
     }
-    .viewer-bd{
-      flex:1 1 auto;
-      width:100%; height:100%;
+    .controls{
       display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:15px;
+      margin-bottom:15px;
+      padding:10px;
+      background:#f9fafb;
+      border-radius:8px;
     }
-    .pdf{
+    .controls button{
+      padding:8px 16px;
+      background:#111827;
+      color:#fff;
+      border:none;
+      border-radius:6px;
+      cursor:pointer;
+      font-size:14px;
+    }
+    .controls button:hover{
+      background:#374151;
+    }
+    .controls button:disabled{
+      background:#d1d5db;
+      cursor:not-allowed;
+    }
+    .controls span{
+      font-weight:500;
+    }
+    #pdfContainer{
       width:100%;
-      height:100%;
-      border:0;
-      display:block;
-      object-fit:contain;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      gap:20px;
+    }
+    .pdf-page{
+      box-shadow:0 2px 8px rgba(0,0,0,0.1);
+      max-width:100%;
+    }
+    .loading{
+      text-align:center;
+      padding:40px;
+      color:var(--muted);
     }
   </style>
 </head>
@@ -66,40 +96,124 @@
     <header>
       <img src="https://oiltest.report/images/micgsm-logo-3-web-bw.png" alt="logo" style="width:100px">
     </header>
-
     <section class="notice">
       <p>Пожалуйста, удостоверьтесь, что оригинальный протокол, представленный на этом сайте, идентичен тому, что у Вас в руках.</p>
       <p>Также проверьте, что страница открылась именно в домене:
         <a href="https://oiltest.report">"https://oiltest-report.ru"</a>.
         Любой другой адрес и протокол будут считаться неоригинальными.</p>
     </section>
-
-    <!-- PDF тек ?doc=... болса ғана көрінеді -->
     <div id="viewerWrap" class="viewer-wrap">
       <section class="viewer">
-        <div class="viewer-bd">
-          <embed id="pdfViewer" class="pdf" src="" type="application/pdf">
+        <div class="controls">
+          <button id="prevPage">←</button>
+          <span id="pageInfo">Бет: <span id="pageNum">1</span> / <span id="pageCount">-</span></span>
+          <button id="nextPage">→</button>
+        </div>
+        <div id="pdfContainer">
+          <div class="loading">Жүктелуде...</div>
         </div>
       </section>
     </div>
   </div>
-
   <script>
-    (function(){
-      const PDFS = {
-        "47": "ГПА-1.pdf",
-        "59": "ГПА-2.pdf",
-        "72": "ГПА-3.pdf"
-      };
-      const params = new URLSearchParams(location.search);
-      const key = params.get("doc");
-      const wrap = document.getElementById("viewerWrap");
-      const pdf = document.getElementById("pdfViewer");
-      if (key && PDFS[key]) {
-        wrap.style.display = "flex";
-        pdf.src = PDFS[key];
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+
+    const PDFS = {
+      "47": "GPA-1.pdf",
+      "59": "GPA-2.pdf",
+      "72": "GPA-3.pdf"
+    };
+
+    const params = new URLSearchParams(location.search);
+    const key = params.get("doc");
+    
+    if (key && PDFS[key]) {
+      document.getElementById("viewerWrap").style.display = "flex";
+      
+      let pdfDoc = null;
+      let currentPage = 1;
+      const container = document.getElementById("pdfContainer");
+      const pageNumSpan = document.getElementById("pageNum");
+      const pageCountSpan = document.getElementById("pageCount");
+      const prevBtn = document.getElementById("prevPage");
+      const nextBtn = document.getElementById("nextPage");
+
+      pdfjsLib.getDocument(PDFS[key]).promise.then(pdf => {
+        pdfDoc = pdf;
+        pageCountSpan.textContent = pdf.numPages;
+        container.innerHTML = '';
+        renderAllPages();
+      }).catch(err => {
+        container.innerHTML = '<p style="color:red">PDF жүктелмеді: ' + err.message + '</p>';
+      });
+
+      function renderAllPages() {
+        for (let i = 1; i <= pdfDoc.numPages; i++) {
+          renderPage(i);
+        }
       }
-    })();
+
+      function renderPage(num) {
+        pdfDoc.getPage(num).then(page => {
+          const viewport = page.getViewport({scale: 1.5});
+          const canvas = document.createElement('canvas');
+          canvas.className = 'pdf-page';
+          const context = canvas.getContext('2d');
+          canvas.height = viewport.height;
+          canvas.width = viewport.width;
+
+          const renderContext = {
+            canvasContext: context,
+            viewport: viewport
+          };
+
+          container.appendChild(canvas);
+          page.render(renderContext);
+        });
+      }
+
+      prevBtn.addEventListener('click', () => {
+        if (currentPage > 1) {
+          currentPage--;
+          pageNumSpan.textContent = currentPage;
+          scrollToPage(currentPage);
+        }
+      });
+
+      nextBtn.addEventListener('click', () => {
+        if (pdfDoc && currentPage < pdfDoc.numPages) {
+          currentPage++;
+          pageNumSpan.textContent = currentPage;
+          scrollToPage(currentPage);
+        }
+      });
+
+      function scrollToPage(pageNum) {
+        const canvases = container.querySelectorAll('canvas');
+        if (canvases[pageNum - 1]) {
+          canvases[pageNum - 1].scrollIntoView({behavior: 'smooth', block: 'start'});
+        }
+      }
+
+      let observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            const canvases = Array.from(container.querySelectorAll('canvas'));
+            const pageIndex = canvases.indexOf(entry.target);
+            if (pageIndex !== -1) {
+              currentPage = pageIndex + 1;
+              pageNumSpan.textContent = currentPage;
+            }
+          }
+        });
+      }, {threshold: 0.5});
+
+      setTimeout(() => {
+        container.querySelectorAll('canvas').forEach(canvas => {
+          observer.observe(canvas);
+        });
+      }, 1000);
+    }
   </script>
 </body>
 </html>
