--- a/index.html
+++ b/index.html
@@ -165,19 +165,20 @@
       function renderPage(num) {
         pdfDoc.getPage(num).then(page => {
           const scale = window.devicePixelRatio || 1;
-          const viewport = page.getViewport({scale: 2.0 * scale});
+          const viewport = page.getViewport({scale: 2.0});
           const canvas = document.createElement('canvas');
           canvas.className = 'pdf-page';
           const context = canvas.getContext('2d');
           
-          canvas.height = viewport.height;
-          canvas.width = viewport.width;
-          canvas.style.width = viewport.width / scale + 'px';
-          canvas.style.height = viewport.height / scale + 'px';
+          canvas.height = viewport.height * scale;
+          canvas.width = viewport.width * scale;
+          canvas.style.width = viewport.width + 'px';
+          canvas.style.height = viewport.height + 'px';
 
           const renderContext = {
             canvasContext: context,
-            viewport: viewport
+            viewport: viewport,
+            transform: [scale, 0, 0, scale, 0, 0]
           };
 
           container.appendChild(canvas);
