--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
       function renderPage(num) {
         pdfDoc.getPage(num).then(page => {
-          const scale = window.devicePixelRatio || 1;
+          const scale = (window.devicePixelRatio || 1) * 2;
           const viewport = page.getViewport({scale: 1.5});
           const canvas = document.createElement('canvas');
           canvas.className = 'pdf-page';
