Update PDF mapping keys in index.html

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
 
     const PDFS = {
-      "47": "GPA-1.pdf",
-      "59": "GPA-2.pdf",
-      "72": "GPA-3.pdf"
+      "a7f3k9m2p5x8": "GPA-1.pdf",
+      "q4w9e2r7t1y6": "GPA-2.pdf",
+      "z3x8c5v1b6n4": "GPA-3.pdf"
     };
 
     const params = new URLSearchParams(location.search);
