Update PDFS object with new keys for PDFs

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
 
     const PDFS = {
-      "a7f3k9m2p5x8": "GPA-1.pdf",
-      "q4w9e2r7t1y6": "GPA-2.pdf",
-      "z3x8c5v1b6n4": "GPA-3.pdf"
+      "a7f3k9m2p5x8q4w6e1r9t2y5u7i3o8p1l6k4j9h2g5f8d3s7a1z9x4c6v2b8n5m1q3w7e9r4t6y1u8i3o5p2": "GPA-1.pdf",
+      "z3x8c5v1b6n4m9q2w7e4r1t6y9u3i8o5p2l1k7j4h9g6f3d8s5a2z7x1c4v9b6n3m8q5w2e7r4t1y6u9i3o8p5": "GPA-2.pdf",
+      "m8n5b2v9c6x1z4a7s3d6f9g2h5j8k1l4p7o3i6u9y2t5r8e1w4q7m3n6b9v2c5x8z1a4s7d3f6g9h2j5k8l1p4": "GPA-3.pdf"
     };
 
     const params = new URLSearchParams(location.search);
